--- a/IM/IMAgile.html
+++ b/IM/IMAgile.html
@@ -144,6 +144,7 @@
 { "AreaTitle":"跨组周例会"   , "AreaCoords":"252.5,436,369,494" , "AreaLink":"https://xfmkp6q7le.feishu.cn/docs/doccnADbphIL8bgEuUXwRYpsNQe"}, 
 { "AreaTitle":"团队回顾会"   , "AreaCoords":"413.5,514,522,540" , "AreaLink":"https://xfmkp6q7le.feishu.cn/docs/doccnQbItprAt1NOibEbg6Ro3Ph"}, 
 { "AreaTitle":"产品评审会"   , "AreaCoords":"599.5,559,750,585" , "AreaLink":"https://xfmkp6q7le.feishu.cn/docs/doccnXSncVu3LER3HBmecDK13Rb"}, 
+{ "AreaTitle":"内建质量"   , "AreaCoords":"554,355,640,437" , "AreaLink":"https://xfmkp6q7le.feishu.cn/docs/doccn376hpEkmnqH94G2LNDToRg"}, 
         ]
     };
 
