--- a/IM/IMAgile.html
+++ b/IM/IMAgile.html
@@ -59,7 +59,6 @@
             },
             { "MenuTitle": "角色", "MenuLink": "https://xfmkp6q7le.feishu.cn/file/boxcn2zWUJsYiWvqN2YlvZQaFDd", 
               SubMenus: [
-                  { "MenuTitle": "业务总监", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccnTsTnDfCl7bRvyksdhUUS6f#IqOaDI" }, 
                   { "MenuTitle": "业务", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccnTsTnDfCl7bRvyksdhUUS6f#IqOaDI" }, 
                   { "MenuTitle": "CPO", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccnTsTnDfCl7bRvyksdhUUS6f#MO49jq" }, 
                   { "MenuTitle": "PO", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccnTsTnDfCl7bRvyksdhUUS6f#2vqpmr" }, 
@@ -79,12 +78,10 @@
                   { "MenuTitle": "变更管理", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccnfjVvpBj5pk0DxxhX6w62td" },
               ]
             },
-            { "MenuTitle": "质量管理", "MenuLink": "javascript:void(0);", 
+            { "MenuTitle": "运维&质量管理", "MenuLink": "javascript:void(0);", 
               SubMenus: [
-                  { "MenuTitle": "发布质量管理", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccn6Rtl16k525Et9O216MgvPg" }, 
-                  { "MenuTitle": "迭代质量管理", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccnMIwGj3wsqeeztpHrmhY9Td" }, 
-                  { "MenuTitle": "功能质量管理", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccnhuhiaxnsfspEu3mBpcehyb" }, 
-                  { "MenuTitle": "其他", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccne365xW64J2QVuYmI4hv64c" }, 
+                  { "MenuTitle": "内建质量", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccn376hpEkmnqH94G2LNDToRg" }, 
+                  { "MenuTitle": "运维管理", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccnGcFnmgv4G2AHJZKonICQYd" }, 
               ]
             },
         ]
