--- a/IM/IMAgile.html
+++ b/IM/IMAgile.html
@@ -74,7 +74,7 @@
             { "MenuTitle": "需求管理", "MenuLink": "javascript:void(0);", 
               SubMenus: [
                   { "MenuTitle": "需求结构", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccnchoEdBIYksKjsJLUubSUJb" }, 
-                  { "MenuTitle": "工作方式", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccnOAEQwBcGQgpTxzYszMVzth" }, 
+                  { "MenuTitle": "实践方法", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccnOAEQwBcGQgpTxzYszMVzth" }, 
                   { "MenuTitle": "变更管理", "MenuLink": "https://xfmkp6q7le.feishu.cn/docs/doccnbLUjLo06ZKNbnIUEKieYZf" },
               ]
             },
