--- a/IM/IMAgile.html
+++ b/IM/IMAgile.html
@@ -3,9 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>智己汽车敏捷导航站</title>
-    <link rel="icon" href="./SourceFiles/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="./SourceFiles/favicon.ico" type="image/x-icon">
+    <title>敏捷导航站</title>
     <link rel="stylesheet" id="bootstrap.min-css" href="./SourceFiles/bootstrap.min.css" type="text/css" media="all">
     <link rel="stylesheet" id="jt-headers-css" href="./SourceFiles/jt-headers.css" type="text/css" media="all">
     <link rel="stylesheet" id="jt-content-elements-css" href="./SourceFiles/jt-content-elements.css" type="text/css" media="all">
@@ -210,7 +208,7 @@
         </div>
     </div>
     <footer class="jt-footer-style-two   ">
-        <div class="container-fluid padding-zero text-widget-holder" style="margin-bottom: 40px; text-align:center">Copyright © 2021 智己汽车️ </div>
+        <div class="container-fluid padding-zero text-widget-holder" style="margin-bottom: 40px; text-align:center">Copyright © 2021</div>
     </footer>
     <script type="text/javascript" src="./SourceFiles/scripts(1).js" id="juster-scripts-js"></script>
 </body>
