--- a/MSG/DateShow.html
+++ b/MSG/DateShow.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="DateShow.js"></script>
 </head>
 <body>
-<div id="msg"></div>
+<div id="msg">一切都是最好的安排</div>
 
 	<script type="text/javascript">
 
