--- a/MSG/DateShow.html
+++ b/MSG/DateShow.html
@@ -6,9 +6,14 @@
 	<script type="text/javascript" src="DateShow.js"></script>
 </head>
 <body>
-<div id="msg">一切都是最好的安排</div>
 
-	<script type="text/javascript">
+<table class="table container" align="center">
+    <tr>
+        <th colspan="2" id="msg">一切都是最好的安排</th>
+    </tr>
+</table>
+
+	<script language="javascript">
 
 
     function Draw(){
